<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:orientation="vertical" >

    <include layout="@layout/header_bar" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/lay_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/btn_add_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_blue"
                android:drawableRight="@drawable/ic_add"
                android:padding="10dp"
                android:text="@string/add_contact"
                android:textColor="@color/dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/separator_bkg"
        android:gravity="center_vertical"
        android:paddingBottom="3dp"
        android:paddingLeft="8dp"
        android:text="@string/message"
        android:textColor="@color/dark_gray"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/note_bkg_yellow"
        android:gravity="top"
        android:paddingBottom="25dp"
        android:paddingLeft="19dp"
        android:paddingRight="20dp"
        android:paddingTop="18dp"
        android:text="Birthday party"
        android:textColor="@color/dark_gray"
        android:textSize="19dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/cb_enabled"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:checked="true"
            android:drawableLeft="@drawable/check_box"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:textColor="@drawable/txt_white"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled" />

        <Button
            android:id="@+id/btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_color_yellow" />

        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_time"
            android:text="@string/starting_from" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/dark_gray"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:text="@string/delete"
            android:textColor="@color/dark_gray"
            android:textSize="15dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_save_reminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:text="@string/save_reminder"
            android:textColor="@color/dark_gray"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>